--- a/public/about.html
+++ b/public/about.html
@@ -13,6 +13,6 @@
 
 <p>Ready to join me in this tech journey? Let's soar together! 🚀</p>
 <ul>
-  <li><a href="">LinkedIn</a></li>
-  <li><a href="">GitHub</a></li>
+  <li><a href="https://www.linkedin.com/in/avsamarnath/">LinkedIn</a></li>
+  <li><a href="https://github.com/AmarnathWebDeveloper">GitHub</a></li>
 </ul>
